package domain.user.register.same_user_validation

import domain.user.UserName

case class SameUserValidation(userName: UserName)
